fix for letter spacing

--- a/packages/nyris-widget/src/styles/nyris.scss
+++ b/packages/nyris-widget/src/styles/nyris.scss
@@ -103,7 +103,6 @@
       margin-left: 8px;
       margin-bottom: 5px;
       font-size: 20px;
-      letter-spacing: 0.34px;
       color: $color-heading;
       font-weight: 700;
       &--big { 
@@ -114,7 +113,6 @@
     &-description {
       margin-left: 8px;
       font-size: 14px;
-      letter-spacing: 0.28px;
       color: $color-text;
       font-weight: 400;
     }
@@ -250,7 +248,6 @@
   @include flex-center();
 
   font-size: $fs-base;
-  letter-spacing: 0.21px;
   
   & a {
     font-weight: 400;
@@ -266,7 +263,6 @@
   &-logo {
     font-size: 10px;
     font-weight: 700;
-    letter-spacing: 0.8px;
 
   }
 }
@@ -316,7 +312,6 @@
 
   & a {
     font-weight: bold;
-    letter-spacing: 0.28px;
     line-height: 20px;
     color: $color-text;
     text-decoration: none;
